@@ -8,6 +8,7 @@ v 8.12.2 (unreleased)
 v 8.12.1
   - Fix a memory leak in HTML::Pipeline::SanitizationFilter::WHITELIST
   - Fix issue with search filter labels not displaying
+  - Fix Import/Export not recognising correctly the imported services.
 
 v 8.12.0
   - Update the rouge gem to 2.0.6, which adds highlighting support for JSX, Prometheus, and others. !6251
